--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Richard Henderson <rth@twiddle.net> "slim" macros for better shared libraries
 James Henstridge <james@daa.com.au> Build fixes related to freetype
 Graydon Hoare <graydon@redhat.com> Support for non-render X server, first real text support
 Thomas Hunger <info@teh-web.de> Initial version of cairo_in_stroke/fill
+Björn Lindqvist <bjourne@gmail.com> Performance test cases
 Kristian Høgsberg <krh@redhat.com> PDF backend, PS backend with meta-surfaces
 Amaury Jacquot <sxpert@esitcom.org> Documentation review, appplication testing
 Adrian Johnson <ajohnson@redneon.com> PDF backend improvement
