--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Christian Biesinger <cbiesinger@web.de> BeOS backend
 Billy Biggs <vektor@dumbterm.net> Pixman code merge. Optimization. Fixes for subtle rendering bugs.
 Hans Breuer <hans@breuer.org> win32 bug fixes, build fixes, and improvements
 Brian Cameron <brian.cameron@sun.com> Flag bug in Sun's X server
+Carlos Garcia Campos <carlosgc@gnome.org> libspectre integration into the test-suite
 Damien Carbery <damien.carbery@sun.com> Build fixes
 Andrew Chant <andrew.chant@utoronto.ca> Adding const where needed
 Steve Chaplin <stevech1097@yahoo.com.au> Bug fixes for PNG reading
