Correct NEWS to say 'release' instead of 'snapshot' for 1.8.0
A copy-and-paste bug strikes again.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Snapshot 1.8.0 (2008-09-25 Carl Worth <cworth@cworth.org>)
-==========================================================
+Release 1.8.0 (2008-09-25 Carl Worth <cworth@cworth.org>)
+=========================================================
 The cairo community is happy (and relieved) to announce the 1.8.0
 release of the cairo graphics library. This is a major update to
 cairo, with new features and enhanced functionality which maintains
