--- a/perf/README
+++ b/perf/README
@@ -199,15 +199,22 @@ as the files are much smaller.
 The output file will be called $APPLICATION.$PID.trace, the actual path
 written to will be displayed on the terminal.
 
+Alternatively you can use:
+$ cairo-trace --profile $APPLICATION [$ARGV]
+which automatically passes --no-mark-dirty and --no-callers and compresses
+the resultant trace using LZMA. To use the trace with cairo-perf-trace you
+will first need to decompress it.
+
 Then to use cairo-perf-trace:
 $ ./cairo-perf-trace $APPLICATION.$PID.trace
 
-Alternatively you can put the trace into perf/traces, or set
+Alternatively you can put the trace into perf/cairo-traces, or set
 CAIRO_TRACE_DIR to point to your trace directory, and the trace will be
 included in the performance tests.
 
 If you record an interesting trace, please consider sharing it by compressing
-it, LZMA preferred, and posting a link to cairo@cairographics.org.
+it, LZMA preferred, and posting a link to cairo@cairographics.org, or by
+uploading it to git.cairographics.org/cairo-traces.
 
 
 How to run cairo-perf-diff on WINDOWS
